questions 6 and 7 added

--- a/index.html
+++ b/index.html
@@ -19,37 +19,81 @@
     </div>
     <main>
         <div class="intro">
-            <h3 class="intro"> - INTRODUCTION - </h3>
+            <h3> - INTRODUCTION - </h3>
             <p class="intro">
                 Hi, my name is Kumail and I am a digital designer looking to get into the tech industry. 
                 My background is in design & animation but I am hoping to pair thoes skills with what I learn from this course to become a web developer.
             </p>
         </div>
     <div class="container">
-        <div class="block">
-            <h3 class="education"> EDUCATION HISTORY </h3>
+        <div class="blockL">
+            <h3> EDUCATION HISTORY </h3>
             <ul>
                 <li>
-                    Leeds Arts University - BA Animation
+                    Leeds Arts University - BA Animation, 2021
                 </li>
                 <li>
-                    Stamford College - Foundation Diploma, Art & Design
+                    Stamford College - Foundation Diploma, Art & Design, 2018
                 </li>
             </ul>
         </div>
-        <div class="block">
-            <h3 class="experience"> EXPERIENCE</h3>
+        <div class="blockR">
+            <h3> EXPERIENCE</h3>
            <ul>
             <li>
-                Composable Finance - Digital Creative Lead
+                Composable Finance - Digital Creative Lead (marketing)
             </li>
             <li>
-                Advanced Blockchain - Digital Designer
+                Advanced Blockchain - Digital Designer (marketing)
+            </li>
+            <li>
+                Freelance Illustration & Animation
             </li>
            </ul> 
         </div>
     </div>
+ <div class="container">
+    <div class="block">
+        <h3> TOP 10 MOVIES</h3>
+        <ol>
+            <li>
+                Howls moving castle
+            </li>
+            <li>
+                Fantastic Mr Fox
+            </li>
+            <li>
+                John wick 4
+            </li>
+            <li>
+                Spiderman Into the spiderverse
+            </li>
+            <li>
+                Princess mononoke
+            </li>
+            <li>
+                The lord of the rings: 2001
+            </li>
+            <li>
+                Interstellar
+            </li>
+            <li>
+                Predator
+            </li>
+            <li>
+                The batman
+            </li>
+            <li>
+                Toy Story
+            </li>
+        </ol>
+    </div>
+</div>
     </main>
-    <footer></footer>
+<div class="footer">
+    <footer>
+        
+    </footer>
+</div>
 </body>
 </html>
