--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Advanced Blockchain - Digital Designer (marketing)
             </li>
             <li>
-                Freelance Illustration & Animation
+                Freelance - Illustrator & Animator
             </li>
            </ul> 
         </div>
@@ -90,10 +90,6 @@
     </div>
 </div>
     </main>
-<div class="footer">
-    <footer>
-        
-    </footer>
-</div>
+    <footer></footer>
 </body>
 </html>
