--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3> - INTRODUCTION - </h3>
             <p class="intro">
                 Hi, my name is Kumail and I am a digital designer looking to get into the tech industry. 
-                My background is in design & animation but I am hoping to pair thoes skills with what I learn from this course to become a web developer.
+                My background is in design & animation but I am hoping to pair thoes skills with what I learn from this course to become a web developer. I play a variety of games, and create both 2D and 3D artwork in my spare time.
             </p>
         </div>
     <div class="container">
